@@ -1860,6 +1860,7 @@ public final class RecipeMaps {
                 .validateOutputCount(1, 1)
                 .validateOutputFluidCount(-1, 0)
                 .validateInputFluidCount(1, 4)
+                .ignoreCollision()
                 .buildWithAlt();
             // noinspection SimplifyOptionalCallChains
             if (!rr.isPresent()) return Collections.emptyList();
@@ -1886,7 +1887,7 @@ public final class RecipeMaps {
                 .map(
                     val -> Arrays.stream(val)
                         .collect(Collectors.toList()))
-                .collect(Collectors.toList());
+                .toList();
             slots.stream()
                 .reduce(
                     Stream.of(new ArrayList<ItemStack>()),
